--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">Budilica</string>
     <string name="action_settings">Settings</string>
+
+    <string-array name="budilica_niz">
+        <item>Bip</item>
+        <item>Glasni</item>
+        <item>Laganini</item>
+        <item>Moderni</item>
+        <item>Reklama</item>
+    </string-array>
 </resources>
